--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" src="css/stilos.css" />
     </head>
     <body>
+        <div><h2>Cabecera</h2></div>
         <h1>Nuevo header</h1>
         <h1>Hola mundo</h1>
         <p>Nuevo</p>
