Adicion de contenido

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>Nuevo header</h1>
         <h1>Hola mundo</h1>
-        <p>Nuevo</p>
+        <p>Este es el contenido</p>
     </body>
 </html>
