Adicion de cabecera

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <div><h2>Cabecera</h2></div>
+        <div><h3>Sub cabecera</h3></div>
+
         <h1>Nuevo header</h1>
         <h1>Hola mundo</h1>
         <p>Nuevo</p>
