--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" src="css/stilos.css" />
     </head>
     <body>
-        <div><h2>Cabecera</h2></div>
+        <div><h2>Cabecera de archivo</h2></div>
         <div><h3>Sub cabecera</h3></div>
 
         <h1>Nuevo header</h1>
