--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <link rel="stylesheet" src="css/stilos.css" />
     </head>
     <body>
-        <div><h2>Cabecera</h2></div>
+        <div><h2>De que hablas</h2></div>
         <div><h3>Sub cabecera</h3></div>
 
-        <h1>Nuevo header</h1>
+        <h1>Nuevo header de prueba</h1>
         <h1>Hola mundo</h1>
         <p>Este es el contenido</p>
     </body>
