--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Hola mundo</title>
-        <link rel="stylesheet" src="css/stilos.css" />
+        <link rel="stylesheet" src="css/estilos.css" />
     </head>
     <body>
         <div><h2>Cabecera de archivo</h2></div>
@@ -10,5 +10,6 @@
         <h1>Nuevo header de prueba</h1>
         <h1>Hola mundo</h1>
         <p>Este es el contenido</p>
+        <div id="footer" class="footer">Ejemplo</div>
     </body>
 </html>
